Update and rename html.html to index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#">FAVOURITE</a></li>
           <li><a href="#">LIFESTYLE</a></li>
           <!-- <li><a href="#"><span>SIGN UP</span></a></li> -->
-          <button><a href="html.html">SIGN UP</a></button>
+          <button><a href="index.html">SIGN UP</a></button>
 
         </ul>
 
